--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
       </div>
     </div>
 
-    <div class=" bg-primary-500 py-20">
+    <div class=" bg-primary-500 py-36 relative overflow-hidden ">
       <div class="max-w-[1024px] flex mx-auto items-end text-white text-lg ">
         <div class="w-1/2">
           <div class="mb-5">
@@ -449,11 +449,100 @@
           </div>
           <div class="relative">
             <input id="email" type="email" required placeholder="Email address"
-              class="w-full p-4 rounded-lg border border-white bg-transparent">
+              class="w-full p-4 rounded-xl border border-slate-300 bg-transparent outline-none focus:bg-white focus:bg-opacity-20">
             <label for="email"
-              class="absolute top-3 right-5 border border-white bg-slate-50 text-primary-400 font-semibold px-3 py-2 rounded-md">Get
+              class="absolute top-2 right-5 border border-white bg-slate-50 text-primary-500 font-semibold px-3 py-2 rounded-md">Get
               free chapters</label>
           </div>
+        </div>
+      </div>
+      <!-- svg  -->
+      <!-- top row  -->
+      <div class="absolute -top-6 right-0 ">
+        <div class="p-2 bg-primary-200 bg-opacity-50">
+          <div class="p-4 bg-primary-500 rounded-full"></div>
+        </div>
+      </div>
+      <div class="absolute -top-6 right-[60px]">
+        <div class="p-3 bg-primary-200 rounded-full ">
+          <div class="p-3 bg-primary-500 "></div>
+        </div>
+      </div>
+      <div class="absolute -top-6 right-[120px]">
+        <div class="p-2 bg-primary-200 bg-opacity-50">
+          <div class="p-4 bg-primary-500 rounded-full"></div>
+        </div>
+      </div>
+      <div class="absolute -top-6 right-[180px] ">
+        <div class="p-3 bg-primary-200 rounded-full ">
+          <div class="p-3 bg-primary-500 "></div>
+        </div>
+      </div>
+      <div class="absolute -top-6 right-[240px] ">
+        <div class="p-3 bg-primary-200 rounded-full ">
+          <div class="p-3 bg-primary-500 "></div>
+        </div>
+      </div>
+      <div class="absolute -top-6 right-[300px]">
+        <div class="p-2 bg-primary-200 bg-opacity-50">
+          <div class="p-4 bg-primary-500 rounded-full"></div>
+        </div>
+      </div>
+      <div class="absolute -top-6 right-[360px] ">
+        <div class="p-3 bg-primary-200 rounded-full ">
+          <div class="p-3 bg-primary-500 "></div>
+        </div>
+      </div>
+      <div class="absolute -top-6 right-[420px]">
+        <div class="p-2 bg-primary-200 bg-opacity-50">
+          <div class="p-4 bg-primary-500 rounded-full"></div>
+        </div>
+      </div>
+      <!-- second row  -->
+      <div class="absolute top-8 right-0">
+        <div class="p-3 bg-primary-200 rounded-full ">
+          <div class="p-3 bg-primary-500 "></div>
+        </div>
+      </div>
+      <div class="absolute top-8 right-[60px]">
+        <div class="p-2 bg-primary-200 bg-opacity-50">
+          <div class="p-4 bg-primary-500 rounded-full"></div>
+        </div>
+      </div>
+      <div class="absolute top-8 right-[120px]">
+        <div class="p-2 bg-primary-200 bg-opacity-50">
+          <div class="p-4 bg-primary-500 rounded-full"></div>
+        </div>
+      </div>
+      <div class="absolute top-8 right-[180px]">
+        <div class="p-2 bg-primary-200 bg-opacity-50">
+          <div class="p-4 bg-primary-500 rounded-full"></div>
+        </div>
+      </div>
+      <div class="absolute top-8 right-[240px]">
+        <div class="p-3 bg-primary-200 rounded-full ">
+          <div class="p-3 bg-primary-500 "></div>
+        </div>
+      </div>
+      <div class="absolute top-8 right-[300px]">
+        <div class="p-3 bg-primary-200 rounded-full ">
+          <div class="p-3 bg-primary-500 "></div>
+        </div>
+      </div>
+      <div class="absolute top-8 right-[360px]">
+        <div class="p-2 bg-primary-200 bg-opacity-50">
+          <div class="p-4 bg-primary-500 rounded-full"></div>
+        </div>
+      </div>
+      <div class="absolute top-8 right-[420px]">
+        <div class="p-3 bg-primary-200 rounded-full ">
+          <div class="p-3 bg-primary-500 "></div>
+        </div>
+      </div>
+      <!-- third row  -->
+      <div class="absolute top-24 right-0">
+        <div class="p-2 bg-primary-200 bg-opacity-50">
+          <div class="p-4 bg-primary-500 rounded-full"></div>
         </div>
       </div>
 
